--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <img src="netflix.png" alt="Netflix logo" />
         <img src="aiebnd.png" alt="Google logo" />
         <img src="amazon.png" alt="Netflix logo" />
-        <img src="google.png" alt="Google logo" />
+
         <img src="netflix.png" alt="Netflix logo" />
       </div>
     </section>
@@ -86,7 +86,7 @@
           <div>
             <img src="cource-core.png" alt="" />
           </div>
-          <p class="card-heading">Web Development</p>
+          <p class="card-heading">Data Science</p>
           <a href="/">View Courses</a>
         </div>
         <div class="course-card">
@@ -118,13 +118,13 @@
             <div class="join-now-img-wrapper">
               <i class="fas fa-user-check"></i>
             </div>
-            <p>Flexible Learning</p>
+            <p>Expert Instructor</p>
           </li>
           <li>
             <div class="join-now-img-wrapper">
               <i class="fas fa-users"></i>
             </div>
-            <p>Flexible Learning</p>
+            <p>interactive community</p>
           </li>
         </ul>
         <a href="/" class="join-now-a"
