--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
           <img src="logo.png" alt="Class Iq Svg" />
           <span>ClassIQ</span>
         </a>
-        <a href="courses.html">Courses</a>
+        <a href="cources.html">Courses</a>
       </div>
       <div class="header-right">
-        <a href="login.html">Login</a>
-        <a href="Signup.html">Signup</a>
+        <a href="signup.html">login</a>
+        <a href="signin.html">Signup</a>
       </div>
     </header>
     <!-- header end -->
@@ -45,7 +45,7 @@
           with our innovative online courses, expert instructors, and
           interactive learning tools.
         </p>
-        <a href="courses.html" class="courses-link">Explore Courses</a>
+        <a href="cources.html" class="courses-link">Explore Courses</a>
       </div>
       <div class="main-right">
         <img src="herosection.png" alt="Happy Student" />
