--- a/signup.html
+++ b/signup.html
@@ -17,8 +17,8 @@
         <a href="courses.html">Courses</a>
       </div>
       <div class="header-right">
-        <a href="signin.html">login</a>
-        <a href="Signup.html">Signup</a>
+        <a href="signup.html">login</a>
+        <a href="signin.html">Signup</a>
       </div>
     </header>
     <!-- header end -->
