--- a/cources.html
+++ b/cources.html
@@ -14,7 +14,7 @@
           <img src="logo.png" alt="Class Iq Svg" />
           <span>ClassIQ</span>
         </a>
-        <a href="courses.html">Courses</a>
+        <a href="cources.html">Courses</a>
       </div>
       <div class="header-right">
         <a href="signup.html">login</a>
